[project]
name = "qcextender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "aminrouanserik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pycbc>=2.9.0",
]

[project.scripts]
qcextender = "qcextender:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
