[project]
name = "qcextender"
version = "0.1.11"
description = "This package aims to extend any quasi-circular waveform with complex features."
readme = "README.md"
authors = [
    { email = "aminrouanserik@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pycbc>=2.9.0",
    "sxs>=2025.0.12",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
